fix: end-to-end validation bugs (Windows paths, HTTP status, audit concurrency)
- Policy engine: use [/\] in protected path regexes for Windows compatibility
- Plugin hook: handle HTTP 403 (DENIED) and 202 (ESCALATED) as valid responses
- Plugin hook: include error details in fail-closed block reason
- Audit spine: retry on UniqueViolation from concurrent hash chain inserts
- .gitignore: add auth-profiles.json to prevent credential commits

All three governance decisions validated end-to-end against live OpenClaw 2026.2.15:
  DENIED (§I.2, risk 0.9), APPROVED (risk 0.0), ESCALATED (§II, risk 0.6)
Audit chain: 229 events, SHA-256 integrity VALID.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ governance_db/data/
 .env
 .env.local
 
+# Auth / credentials (OpenClaw, API keys)
+auth-profiles.json
+
 # Internal progress tracker (private)
 PROGRESS.md
 PROGRESS_THE_DREAM.md
