rebrand: Constitutional Control Plane → Gavel

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# ─── Governance Gateway ───────────────────────────────────────
+# ─── Gavel Governance Gateway ─────────────────────────────────
 # Bearer token required for POST /approve (human approval flow)
 HUMAN_API_KEY=change-me-before-production
 
